[package]
name = "azalea"
version = "0.1.0"
authors = ["lolgeny <joel@swedensky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.64"
